# zterm

./: .gitignore  ATLAS_REFACTOR.md  CONFIG_REORG.md  Cargo.toml  MAIN_REORG.md  MISC_REORG.md  PKGBUILD  REDUNDANCY_AUDIT.md  RENDERER_REORG.md  TERMINAL_REORG.md  VT_PARSER_REORG.md  zterm.terminfo
src/: box_drawing.rs  client.rs  color.rs  color_font.rs  config.rs  daemon.rs  edge_glow.rs  font_loader.rs  glyph_shader.wgsl  gpu_types.rs  graphics.rs  image_renderer.rs  image_shader.wgsl  keyboard.rs  lib.rs  main.rs  pane_resources.rs  pipeline.rs  protocol.rs  pty.rs  quad_shader.wgsl  renderer.rs  session.rs  shader.wgsl  simd_utf8.rs  statusline.rs  statusline_shader.wgsl  terminal.rs  vt_parser.rs  window_state.rs
