[package]
name = "zterm"
version = "0.1.0"
edition = "2024"

[lib]
name = "zterm"
path = "src/lib.rs"

[[bin]]
name = "zterm"
path = "src/main.rs"

[dependencies]
# Window and rendering
winit = { version = "0.30", features = ["wayland", "x11"] }
wgpu = "23"
pollster = "0.4"

# PTY handling
rustix = { version = "0.38", features = ["termios", "pty", "process", "fs"] }

# Async I/O
polling = "3"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
bitflags = "2"

# Font rasterization and shaping
ab_glyph = "0.2"
rustybuzz = "0.20"
ttf-parser = "0.25"
fontconfig = "0.10"
fontconfig-sys = { package = "yeslogic-fontconfig-sys", version = "6.0" }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dirs = "6"
notify = "7"

# Shared memory for fast IPC
memmap2 = "0.9"

# Fast byte searching
memchr = "2"

# Base64 decoding for OSC statusline
base64 = "0.22"

# Image processing (Kitty graphics protocol)
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
flate2 = "1"

# Video decoding for WebM support (video only, no audio)
# Requires system FFmpeg libraries (ffmpeg 5.x - 8.x supported)
ffmpeg-next = { version = "8.0", optional = true }

[features]
default = ["webm"]
webm = ["ffmpeg-next"]
